--- a/src/components/Registration/RegistrationOfMember/RegistrationOfMembers.module.css
+++ b/src/components/Registration/RegistrationOfMember/RegistrationOfMembers.module.css
@@ -40,6 +40,5 @@
     width: 350px;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
